# vmecpp

./: CMakeLists.txt
src/: CMakeLists.txt
src/vmecpp/cpp/: CMakeLists.txt
src/vmecpp/cpp/util/: CMakeLists.txt
src/vmecpp/cpp/util/file_io/: CMakeLists.txt
src/vmecpp/cpp/util/hdf5_io/: CMakeLists.txt
src/vmecpp/cpp/util/json_io/: CMakeLists.txt
src/vmecpp/cpp/util/netcdf_io/: CMakeLists.txt
src/vmecpp/cpp/util/testing/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/composed_types_definition/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/composed_types_lib/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/flow_control/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/fourier_basis_fast_poloidal/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/fourier_basis_fast_toroidal/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/magnetic_configuration_definition/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/magnetic_configuration_lib/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/magnetic_field_provider/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/makegrid_lib/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/sizes/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/util/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/common/vmec_indata/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/external_magnetic_field/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/free_boundary_base/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/laplace_solver/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/mgrid_provider/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/nestor/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/regularized_integrals/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/singular_integrals/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/surface_geometry/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/tangential_partitioning/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/boundaries/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/fourier_coefficients/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/fourier_forces/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/fourier_geometry/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/fourier_velocity/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/handover_storage/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/ideal_mhd_model/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/output_quantities/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/profile_parameterization_data/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/pybind11/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/radial_partitioning/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/radial_profiles/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/thread_local_storage/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/vmec/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/vmec_constants/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/vmec/vmec_standalone/: CMakeLists.txt
