add_subdirectory(boundaries)
add_subdirectory(fourier_coefficients)
add_subdirectory(fourier_forces)
add_subdirectory(fourier_geometry)
add_subdirectory(fourier_velocity)
add_subdirectory(handover_storage)
add_subdirectory(ideal_mhd_model)
add_subdirectory(output_quantities)
add_subdirectory(profile_parameterization_data)
add_subdirectory(pybind11)
add_subdirectory(radial_partitioning)
add_subdirectory(radial_profiles)
add_subdirectory(thread_local_storage)
add_subdirectory(vmec)
add_subdirectory(vmec_constants)
add_subdirectory(vmec_standalone)
